--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,6 +29,6 @@ jobs:
       - name: checkout
         uses: actions/checkout@v2
       - name: deploy
-        run: deploy.sh
+        run: ./deploy.sh
 
 
