--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,5 +30,9 @@ jobs:
         uses: actions/checkout@v2
       - name: deploy
         run: ./deploy.sh
+      - uses: actions/upload-artifact@v2
+        with:
+          name: deploy-script
+          path: deploy.sh
 
 
