--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,35 +6,5 @@ jobs:
     steps:
       - name: checkout
         uses: actions/checkout@v2
-      - name: run tests
-        env:
-          secret: ${{ secrets.SOME_SECRET }}
-        run: npm build
-  test:
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node: [ 8, 10, 12 ]
-    steps:
-      - name: checkout
-        uses: actions/checkout@v2
-      - name: run tests
-        env:
-          secret: ${{ secrets.SOME_SECRET }}
-        run: npx jest
-  deploy:
-    needs: [build, test]
-    runs-on: ubuntu-latest
-    steps:
-      - name: checkout
-        uses: actions/checkout@v2
-      - name: test docker
-        run: docker ps -a
-      - name: deploy
-        run: ./deploy.sh
-      - uses: actions/upload-artifact@v2
-        with:
-          name: deploy-script
-          path: deploy.sh
-
-
+      - name: print something
+        run: ls
