--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,5 +6,5 @@ jobs:
     steps:
       - name: checkout
         uses: actions/checkout@v2
-      - name: print something
-        run: ls
+      - name: run tests
+        run: npx jest
