--- a/package.json
+++ b/package.json
@@ -8,17 +8,17 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/gordon-git/craft-night-github-actions.git"
+    "url": "git+https://github.com/PhilipDiessner/craft-night-github-actions.git"
   },
   "keywords": [
     "showcase"
   ],
-  "author": "gordon",
+  "author": "phil",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/gordon-git/craft-night-github-actions/issues"
+    "url": "https://github.com/PhilipDiessner/craft-night-github-actions/issues"
   },
-  "homepage": "https://github.com/gordon-git/craft-night-github-actions#readme",
+  "homepage": "https://github.com/PhilipDiessner/craft-night-github-actions#readme",
   "dependencies": {
     "jest": "^26.6.3",
     "npx": "^10.2.2"
