--- a/.github/workflows/timly-build.yml
+++ b/.github/workflows/timly-build.yml
@@ -1,11 +1,11 @@
 name: Silpion Craft-Night example
-on: pull_request
+on:
+  schedule:
+    # * is a special character in YAML so you have to quote this string
+    - cron:  '*/5 * * * *'
 jobs:
   build:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python: [3.6, 3.8]
     steps:
       - name: checkout
         uses: actions/checkout@v2
