--- a/.github/workflows/timly-build.yml
+++ b/.github/workflows/timly-build.yml
@@ -16,4 +16,4 @@ jobs:
       - name: run python test
         env:
           SECRET: ${{secrets.test}}
-        run: python test.py
+        run: python3 test.py
