--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,12 +13,15 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
+      - name: run python vers
+        run: python3 -v
+  test:
+    runs-on: ubuntu-latest
+    steps:
       - name: run js test
         env:
           super_secret: ${{secrets.test}}
         run: npx jest
-      - name: run python vers
-        run: python3 -v
       - name: run python test
         env:
           SECRET: ${{secrets.test}}
